projects/batfish/src/test/resources/org/batfish/representation/aws/test-transit-gateway-multi-account/aws_configs/accounts/028403472736/us-east-1/Reservations.json
{
 "Reservations": [
  {
   "Groups": [],
   "Instances": [
    {
     "AmiLaunchIndex": 0,
     "Architecture": "x86_64",
     "BlockDeviceMappings": [],
     "CapacityReservationSpecification": {
      "CapacityReservationPreference": "open"
     },
     "ClientToken": "",
     "CpuOptions": {
      "CoreCount": 1,
      "ThreadsPerCore": 1
     },
     "EbsOptimized": false,
     "EnaSupport": true,
     "HibernationOptions": {
      "Configured": false
     },
     "Hypervisor": "xen",
     "ImageId": "ami-0fc61db8544a617ed",
     "InstanceId": "i-04f03d526c63297ae",
     "InstanceType": "t2.micro",
     "KeyName": "publicKey",
     "LaunchTime": "2020-04-28 22:05:15+00:00",
     "MetadataOptions": {
      "HttpEndpoint": "enabled",
      "HttpPutResponseHopLimit": 1,
      "HttpTokens": "optional",
      "State": "pending"
     },
     "Monitoring": {
      "State": "disabled"
     },
     "NetworkInterfaces": [],
     "Placement": {
      "AvailabilityZone": "us-east-1a",
      "GroupName": "",
      "Tenancy": "default"
     },
     "PrivateDnsName": "",
     "ProductCodes": [],
     "PublicDnsName": "",
     "RootDeviceName": "/dev/xvda",
     "RootDeviceType": "ebs",
     "SecurityGroups": [],
     "State": {
      "Code": 48,
      "Name": "terminated"
     },
     "StateReason": {
      "Code": "Client.UserInitiatedShutdown",
      "Message": "Client.UserInitiatedShutdown: User initiated shutdown"
     },
     "StateTransitionReason": "User initiated (2020-04-28 22:35:24 GMT)",
     "Tags": [
      {
       "Key": "Name",
       "Value": "bat-web01"
      }
     ],
     "VirtualizationType": "hvm"
    }
   ],
   "OwnerId": "028403472736",
   "ReservationId": "r-0bc349bf02bbf34e0"
  },
  {
   "Groups": [],
   "Instances": [
    {
     "AmiLaunchIndex": 0,
     "Architecture": "x86_64",
     "BlockDeviceMappings": [
      {
       "DeviceName": "/dev/xvda",
       "Ebs": {
        "AttachTime": "2020-04-28 22:36:30+00:00",
        "DeleteOnTermination": true,
        "Status": "attached",
        "VolumeId": "vol-066fa6058be1773ab"
       }
      }
     ],
     "CapacityReservationSpecification": {
      "CapacityReservationPreference": "open"
     },
     "ClientToken": "",
     "CpuOptions": {
      "CoreCount": 1,
      "ThreadsPerCore": 1
     },
     "EbsOptimized": false,
     "EnaSupport": true,
     "HibernationOptions": {
      "Configured": false
     },
     "Hypervisor": "xen",
     "ImageId": "ami-0fc61db8544a617ed",
     "InstanceId": "i-0bdf35d561be3d962",
     "InstanceType": "t2.micro",
     "KeyName": "publicKey",
     "LaunchTime": "2020-04-28 22:36:30+00:00",
     "MetadataOptions": {
      "HttpEndpoint": "enabled",
      "HttpPutResponseHopLimit": 1,
      "HttpTokens": "optional",
      "State": "applied"
     },
     "Monitoring": {
      "State": "disabled"
     },
     "NetworkInterfaces": [
      {
       "Association": {
        "IpOwnerId": "amazon",
        "PublicDnsName": "ec2-18-212-39-59.compute-1.amazonaws.com",
        "PublicIp": "18.212.39.59"
       },
       "Attachment": {
        "AttachTime": "2020-04-28 22:36:30+00:00",
        "AttachmentId": "eni-attach-0475a7681bf0f8651",
        "DeleteOnTermination": true,
        "DeviceIndex": 0,
        "Status": "attached"
       },
       "Description": "",
       "Groups": [
        {
         "GroupId": "sg-0749b241c02b9bb8c",
         "GroupName": "bat_sg"
        }
       ],
       "InterfaceType": "interface",
       "Ipv6Addresses": [],
       "MacAddress": "12:b2:3c:29:13:9d",
       "NetworkInterfaceId": "eni-0206afdbeb82fcedf",
       "OwnerId": "028403472736",
       "PrivateDnsName": "ip-10-1-1-100.ec2.internal",
       "PrivateIpAddress": "10.1.1.100",
       "PrivateIpAddresses": [
        {
         "Association": {
          "IpOwnerId": "amazon",
          "PublicDnsName": "ec2-18-212-39-59.compute-1.amazonaws.com",
          "PublicIp": "18.212.39.59"
         },
         "Primary": true,
         "PrivateDnsName": "ip-10-1-1-100.ec2.internal",
         "PrivateIpAddress": "10.1.1.100"
        }
       ],
       "SourceDestCheck": true,
       "Status": "in-use",
       "SubnetId": "subnet-0a68915f31d3ca69f",
       "VpcId": "vpc-04048d4bfba9c2289"
      }
     ],
     "Placement": {
      "AvailabilityZone": "us-east-1a",
      "GroupName": "",
      "Tenancy": "default"
     },
     "PrivateDnsName": "ip-10-1-1-100.ec2.internal",
     "PrivateIpAddress": "10.1.1.100",
     "ProductCodes": [],
     "PublicDnsName": "ec2-18-212-39-59.compute-1.amazonaws.com",
     "PublicIpAddress": "18.212.39.59",
     "RootDeviceName": "/dev/xvda",
     "RootDeviceType": "ebs",
     "SecurityGroups": [
      {
       "GroupId": "sg-0749b241c02b9bb8c",
       "GroupName": "bat_sg"
      }
     ],
     "SourceDestCheck": true,
     "State": {
      "Code": 16,
      "Name": "running"
     },
     "StateTransitionReason": "",
     "SubnetId": "subnet-0a68915f31d3ca69f",
     "Tags": [
      {
       "Key": "Name",
       "Value": "bat-web01"
      }
     ],
     "VirtualizationType": "hvm",
     "VpcId": "vpc-04048d4bfba9c2289"
    }
   ],
   "OwnerId": "028403472736",
   "ReservationId": "r-0154599dfa271b7d4"
  }
 ]
}
