projects/batfish/src/test/resources/org/batfish/representation/aws/test-transit-gateway-multi-account/aws_configs/accounts/028403472736/us-east-1/TransitGatewayStaticRoutes.json
{
 "TransitGatewayStaticRoutes": [
  {
   "AdditionalRoutesAvailable": false,
   "Routes": [],
   "TransitGatewayRouteTableId": "tgw-rtb-0b2c8eeefcf19371b"
  }
 ]
}
