projects/batfish/src/test/resources/org/batfish/representation/aws/test-transit-gateway-multi-account/aws_configs/accounts/028403472736/us-east-1/Vpcs.json
{
 "Vpcs": [
  {
   "CidrBlock": "10.1.0.0/16",
   "CidrBlockAssociationSet": [
    {
     "AssociationId": "vpc-cidr-assoc-03b0df824e8e0b644",
     "CidrBlock": "10.1.0.0/16",
     "CidrBlockState": {
      "State": "associated"
     }
    }
   ],
   "DhcpOptionsId": "dopt-3bb56641",
   "InstanceTenancy": "default",
   "IsDefault": false,
   "OwnerId": "028403472736",
   "State": "available",
   "Tags": [
    {
     "Key": "Name",
     "Value": "bat"
    }
   ],
   "VpcId": "vpc-04048d4bfba9c2289"
  }
 ]
}
